--- a/public/signup.html
+++ b/public/signup.html
@@ -16,30 +16,39 @@
       </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="container signup-box">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
-        <form class="signup">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            <span class="sr-only">Error:</span> <span class="msg"></span>
-          </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
-        </form>
-        <br />
-        <p>Or log in <a href="/login">here</a></p>
-      </div>
+        <div class="col-md-6 col-md-offset-3">
+            <h2>Your Info</h2>
+            <form class="signup">
+                <div class="form-group">
+                    <input type="email" class="form-control" id="email-input" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" id="password-input" placeholder="Password">
+                </div>
+                
+                <p>Choose a Sidekick:</p>
+                  <div class="row">
+                    <div class="column" float="left">
+                      <img src="../public/assets/Cat-Neutral.png" alt="Cat" width="200px">
+                    </div>
+                    <div class="column" float="left">
+                      <img src="../public/assets/Dog-Neutral.png" alt="Dog" width="200px">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="name-input" placeholder="SidekickName">
+                  </div>
+
+                <button type="submit" class="btn btn-default">Sign Up</button>
+            </form>
+                
+            <br>
+            <p>Already a friend? Login <a href="/views/home.handlebars">here</a>.</p>
+        </div>
     </div>
-  </div>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
