placed signup imgs next to each other

--- a/public/signup.html
+++ b/public/signup.html
@@ -31,10 +31,10 @@
                 
                 <p>Choose a Sidekick:</p>
                   <div class="row">
-                    <div class="column" float="left">
+                    <div class="col-md-6" float="left">
                       <img src="../public/assets/Cat-Neutral.png" alt="Cat" width="200px">
                     </div>
-                    <div class="column" float="left">
+                    <div class="col-md-6" float="left">
                       <img src="../public/assets/Dog-Neutral.png" alt="Dog" width="200px">
                     </div>
                   </div>
