fixing some html

--- a/public/login.html
+++ b/public/login.html
@@ -18,26 +18,32 @@
 </nav>
 
 <div class="container homePage">
-    <img src="../public/assets/HomePage.jpg" width="700px">
+    <img src="../assets/HomePage.jpg" width="700px">
     <br>
 
-    <div class="row">
-      <form class="login">
-        <div class="col-md-5">
-          <input type="email" class="form-control" id="email-input" placeholder="Email">
-      </div>
-      <div class="col-md-5">
-          <input type="password" class="form-control" id="password-input" placeholder="Password">
-      </div>
-      <div class="col-md-2">
-          <button type="submit" class="btn">Login</button>
-      </div>
-      </form>
-    </div>
+    <form class="login">
+      <div class="row">
+          <div class="col-md-5">
+            <input type="email" class="form-control" id="email-input" placeholder="Email">
+          </div>
 
-    <p>
-        <a href="#">Or Create an Account</a>
-    </p>
+          <div class="col-md-5">
+              <input type="password" class="form-control" id="password-input" placeholder="Password">
+          </div>
+
+          <div class="col-md-2">
+              <button type="submit" class="btn">Login</button>
+          </div>
+
+      </div>
+
+      <div class="row">
+        <p>
+            <a href="/signup">Or Create an Account</a>
+        </p>
+      </div>
+    </form>
+
 
 </div>
 
